fixed header to stretch to the top of screen

--- a/Basic-Portfolio/assets/css/style.css
+++ b/Basic-Portfolio/assets/css/style.css
@@ -3,7 +3,8 @@ body {
   font-size: 18px;
   line-height: 34px;
   color: #434242;
-  background-image: url("/Users/stephaniemattern/Desktop/Responsive-Portfolio/Basic-Portfolio/assets/positive.png")
+  background-image: url("/Users/stephaniemattern/Desktop/Responsive-Portfolio/Basic-Portfolio/assets/positive.png");
+  margin: 0;
 }
 
 * {
@@ -17,7 +18,6 @@ body {
   max-width: 960px;
   margin: 0 auto;
   clear: both;
-  padding: 0px;
 }
 
 h1,
